Thu Mar 08 19:55:44 2007  Steve Huston  <shuston@riverace.com>

        * templates/vc8dll.mpt:
        * templates/vc8exe.mpt:
        * templates/vc8lib.mpt:
        * templates/vc8libexe.mpt: Replace _CRT_SECURE_NO_DEPRECATE with
          _CRT_NONSTDC_NO_WARNINGS. We shouldn't defeat the security-related
          warnings by default, but the _CRT_NONSTDC_NO_WARNINGS are for name
          changes only (generally a prefixed _) and have no affect on
          function.

Mon Mar  5 13:31:24 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * docs/templates/vc8java.txt:

          Added documentation for the vc8java template.

        * modules/WorkspaceCreator.pm:

          Fixed a bug where relative paths would come back in "windows"
          style when generating projects for a windows based project type.
          All file names need to be in the UNIX style for workspaces.

Fri Mar  2 18:14:56 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * docs/USAGE:
        * modules/Driver.pm:
        * modules/MakeWorkspaceBase.pm:
        * modules/Options.pm:
        * modules/ProjectCreator.pm:
        * modules/WorkspaceCreator.pm:

          Added a new option, -for_eclipse, which is useful only to make
          based project types.  It creates files at the top level that
          indicate a project to Eclipse.  It is used by importing an
          existing project into the workspace.

Fri Mar  2 15:57:34 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Creator.pm:

          Fixed a bug in subtraction where if the element to be subtracted
          is the first element it would not be removed.

Wed Feb 28 13:50:41 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * modules/AutomakeWorkspaceCreator.pm:

          Since the top-level Makefile is always added to
          configure.ac.Makefiles, we need to mark '.' as beeing seen so that
          ./Makefile is not added too.

        * modules/Options.pm:
